--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Archivo:400,500,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Hora Pokémon</title>
 </head>
 
@@ -25,7 +25,7 @@
             <embed id= "music" src="" type="audio/mpeg" Autostart="True" Loop="True">
          <p> &copy; Tereza 2019 </p>
     </footer>
-    <script type ="text/javascript" src="index.js"></script>
+    <script type ="text/javascript" src="jquery.js"></script>
 </body>
 
 </html>
