--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <embed id= "music" src="" type="audio/mpeg" Autostart="True" Loop="True">
          <p> &copy; Tereza 2019 </p>
     </footer>
-    <script type ="text/javascript" src="jquery.js"></script>
+    <script type ="text/javascript" src="jquey.js"></script>
 </body>
 
 </html>
